Fixed container padding left and right on mobile and desktop response on the features section and navbar

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -53,6 +53,9 @@
 }
 
 /* Features */
+#features .container {
+  padding: 0;
+}
 .box {
   float: none;
   width: 100%;
