--- a/css/style.css
+++ b/css/style.css
@@ -133,9 +133,13 @@ br {
   padding: 20px;
 }
 
-#navbar ul li:last-child a {
+#navbar .container {
   padding-right: 0;
 }
+
+/* #navbar ul li:last-child a {
+  padding-right: 0;
+} */
 
 #navbar ul li a:hover,
 #navbar ul li a.current {
@@ -198,6 +202,10 @@ br {
 #features {
   color: black;
   overflow: hidden;
+}
+
+#features .container {
+  padding: 0;
 }
 
 .box {
